test(a11y): fix issues with contrast for a11y
affects: @rei/cdr-link

--- a/src/css/generic/color.pcss
+++ b/src/css/generic/color.pcss
@@ -2,6 +2,10 @@
   background-color: #222;
 }
 
+.cdr-bg--lightest {
+  background-color: $background-color-lightest;
+}
+
 .cdr-bg--light {
   background-color: $background-color-light;
 }
